# bilibili-to-podcast

./: .dockerignore  .gitignore  Dockerfile  README.md  bilibili-api.py  bilibili_channel.py  config.yaml  config.yaml.example  logger.py  pyproject.toml  requirements.txt  sources.json  start.sh  start_up.py  sync-r2.py  temp  upload_r2.py  xml_template.py
.github/workflows/: alibabacloud.yml  dockerbuild.yml  python-app.yml  sync.yml  tag-docker-build.yml
docs/: CNAME  FUNCTIONAL.md  index.html
docs/compose/plans/: 2026-06-14-pkg-refactor.md
docs/compose/specs/: 2026-06-14-pkg-refactor-design.md
src/: bilibili_audio_download.py  bilibili_rss.py  bilibili_season.py  bilibili_series.py  config.py  cookie  cron.py  file.py  logger.py  start.sh  start_up.py  upload_r2.py
src/bilibili_podcast/: __init__.py  config.py  config_loader.py  extract_url.py  logger.py  rss.py  storage.py  xml_template.py
src/bilibili_podcast/bilibili/: audio.py  channel.py  meta.py
src/bilibili_podcast/cli/: _config_cli.py  cron.py  fetch.py  gen_index.py  prune.py  rss_cmd.py  sync.py
src/tools/: cli.py  config_loader.py  prune_output.py
tests/: conftest.py  test_audio.py  test_channel.py  test_cli.py  test_config.py  test_config_loader.py  test_derive.py  test_extract_url.py  test_gen_index.py  test_prune_main.py  test_prune_output.py  test_rss.py  test_storage.py  test_storage_force.py  test_upload_r2_sync.py
