[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bilibili-podcast"
version = "0.1.0"
description = "Convert Bilibili collection URLs into podcast RSS feeds"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.34",
    "botocore>=1.34",
    "PyYAML>=6.0",
    "yt-dlp>=2025.10",
    "schedule>=1.2",
    "bilibili-api-python @ git+https://github.com/Nemo2011/bilibili-api.git@dev",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "moto[s3]>=5",
]

[project.scripts]
b2p-prune = "bilibili_podcast.cli.prune:main"
b2p-sync  = "bilibili_podcast.cli.sync:main"
b2p-fetch = "bilibili_podcast.cli.fetch:main"
b2p-rss   = "bilibili_podcast.cli.rss_cmd:main"
b2p-cron  = "bilibili_podcast.cli.cron:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
bilibili_podcast = ["py.typed"]
